# git-helper

./: .flake8  .gitignore  Makefile  README.md  config.yml  config.yml-dist  pyproject.toml
git_helper/: main.py
git_helper/actions/: __init__.py  common.py  create_new_branch.py  switch_branch.py
tests/: test_common.py  test_git_helper.py
